Avoid suppressing Arabic numerals as morekeys when number row is active (for languages that use Indo-Arabic numerals)

--- a/java/res/values/attrs.xml
+++ b/java/res/values/attrs.xml
@@ -443,6 +443,9 @@
         <attr name="keyPreviewTextColor" format="color" />
         <!-- Size of the text for key press feedback popup, in the proportion of key height. -->
         <attr name="keyPreviewTextRatio" format="fraction" />
+
+        <!-- If true, numbers will not be suppressed in moreKeys due to enabled number row (This should be set to true for number row keys) -->
+        <attr name="doNotSuppressNumbersInMoreKeys" format="boolean" />
     </declare-styleable>
 
     <declare-styleable name="Keyboard_Include">
