--- a/java/res/xml/rowkeys_symbols1.xml
+++ b/java/res/xml/rowkeys_symbols1.xml
@@ -24,41 +24,51 @@
     <Key
         latin:keySpec="!text/keyspec_symbols_1"
         latin:additionalMoreKeys="!text/additional_morekeys_symbols_1"
-        latin:moreKeys="!text/morekeys_symbols_1" />
+        latin:moreKeys="!text/morekeys_symbols_1"
+        latin:doNotSuppressNumbersInMoreKeys="true" />
     <Key
         latin:keySpec="!text/keyspec_symbols_2"
         latin:additionalMoreKeys="!text/additional_morekeys_symbols_2"
-        latin:moreKeys="!text/morekeys_symbols_2" />
+        latin:moreKeys="!text/morekeys_symbols_2"
+        latin:doNotSuppressNumbersInMoreKeys="true" />
     <Key
         latin:keySpec="!text/keyspec_symbols_3"
         latin:additionalMoreKeys="!text/additional_morekeys_symbols_3"
-        latin:moreKeys="!text/morekeys_symbols_3" />
+        latin:moreKeys="!text/morekeys_symbols_3"
+        latin:doNotSuppressNumbersInMoreKeys="true" />
     <Key
         latin:keySpec="!text/keyspec_symbols_4"
         latin:additionalMoreKeys="!text/additional_morekeys_symbols_4"
-        latin:moreKeys="!text/morekeys_symbols_4" />
+        latin:moreKeys="!text/morekeys_symbols_4"
+        latin:doNotSuppressNumbersInMoreKeys="true" />
     <Key
         latin:keySpec="!text/keyspec_symbols_5"
         latin:additionalMoreKeys="!text/additional_morekeys_symbols_5"
-        latin:moreKeys="!text/morekeys_symbols_5" />
+        latin:moreKeys="!text/morekeys_symbols_5"
+        latin:doNotSuppressNumbersInMoreKeys="true" />
     <Key
         latin:keySpec="!text/keyspec_symbols_6"
         latin:additionalMoreKeys="!text/additional_morekeys_symbols_6"
-        latin:moreKeys="!text/morekeys_symbols_6" />
+        latin:moreKeys="!text/morekeys_symbols_6"
+        latin:doNotSuppressNumbersInMoreKeys="true" />
     <Key
         latin:keySpec="!text/keyspec_symbols_7"
         latin:additionalMoreKeys="!text/additional_morekeys_symbols_7"
-        latin:moreKeys="!text/morekeys_symbols_7" />
+        latin:moreKeys="!text/morekeys_symbols_7"
+        latin:doNotSuppressNumbersInMoreKeys="true" />
     <Key
         latin:keySpec="!text/keyspec_symbols_8"
         latin:additionalMoreKeys="!text/additional_morekeys_symbols_8"
-        latin:moreKeys="!text/morekeys_symbols_8" />
+        latin:moreKeys="!text/morekeys_symbols_8"
+        latin:doNotSuppressNumbersInMoreKeys="true" />
     <Key
         latin:keySpec="!text/keyspec_symbols_9"
         latin:additionalMoreKeys="!text/additional_morekeys_symbols_9"
-        latin:moreKeys="!text/morekeys_symbols_9" />
+        latin:moreKeys="!text/morekeys_symbols_9"
+        latin:doNotSuppressNumbersInMoreKeys="true" />
     <Key
         latin:keySpec="!text/keyspec_symbols_0"
         latin:additionalMoreKeys="!text/additional_morekeys_symbols_0"
-        latin:moreKeys="!text/morekeys_symbols_0" />
+        latin:moreKeys="!text/morekeys_symbols_0"
+        latin:doNotSuppressNumbersInMoreKeys="true" />
 </merge>
