--- a/java/res/xml/rowkeys_bepo2.xml
+++ b/java/res/xml/rowkeys_bepo2.xml
@@ -46,4 +46,6 @@
     <Key
         latin:keySpec="m"
         latin:moreKeys="!text/morekeys_c" />
+    <Key
+        latin:keySpec="ç"/>
 </merge>
