--- a/java/res/xml/rows_bepo.xml
+++ b/java/res/xml/rows_bepo.xml
@@ -20,24 +20,22 @@
         latin:keyboardLayout="@xml/key_styles_common" />
     <include latin:keyboardLayout="@xml/row_number_switch" />
     <Row
-        latin:keyWidth="10%p"
+        latin:keyWidth="9%p"
     >
         <include
             latin:keyboardLayout="@xml/rowkeys_bepo1" />
     </Row>
     <Row
-        latin:keyWidth="10%p"
+        latin:keyWidth="9%p"
     >
         <include
             latin:keyboardLayout="@xml/rowkeys_bepo2" />
     </Row>
     <Row
-        latin:keyWidth="10%p"
+        latin:keyWidth="9%p"
     >
         <Key
-            latin:keyStyle="shiftKeyStyle"
-            latin:keyWidth="15%p"
-            latin:visualInsetsRight="1%p" />
+            latin:keyStyle="shiftKeyStyle"/>
         <include
             latin:keyboardLayout="@xml/rowkeys_bepo3" />
         <Key
@@ -46,5 +44,5 @@
             latin:visualInsetsLeft="1%p" />
     </Row>
     <include
-        latin:keyboardLayout="@xml/row_qwerty4" />
+        latin:keyboardLayout="@xml/row_bepo4" />
 </merge>
