--- a/java/res/values/strings-uix.xml
+++ b/java/res/values/strings-uix.xml
@@ -14,6 +14,7 @@
     <string name="text_edit_action_title">Text Editor</string>
     <string name="mem_debug_action_title">Debug Info</string>
     <string name="more_actions_action_title">All Actions</string>
+    <string name="bug_viewer_action_title">Bug Viewer</string>
 
     <string name="action_kind_action_key">Action Key</string>
     <string name="action_kind_pinned_key">Pinned Action(s)</string>
