--- a/java/res/values/themes-lxx.xml
+++ b/java/res/values/themes-lxx.xml
@@ -34,12 +34,12 @@
         <item name="keyHintLetterRatio">@fraction/config_key_hint_letter_ratio_lxx</item>
         <item name="keyShiftedLetterHintRatio">@fraction/config_key_shifted_letter_hint_ratio_lxx</item>
         <item name="keyLargeLetterRatio">@fraction/config_key_large_letter_ratio_lxx</item>
-        <item name="keyLabelOffCenterRatio">-80%</item>
+        <item name="keyLabelOffCenterRatio">-120%</item>
         <item name="keyHintLabelRatio">@fraction/config_key_hint_label_ratio_lxx</item>
-        <item name="keyHintLabelOffCenterRatio">300%</item>
-        <item name="keyLabelFlags">alignHintLabelToBottom</item>
+        <item name="keyHintLabelOffCenterRatio">400%</item>
+        <item name="keyLabelFlags" />
         <item name="spacebarIconWidthRatio">0.9</item>
         <!-- No popup hint letter -->
-        <item name="keyPopupHintLetter"></item>
+        <item name="keyPopupHintLetter" />
     </style>
 </resources>
