--- a/java/res/values/strings-uix.xml
+++ b/java/res/values/strings-uix.xml
@@ -20,6 +20,7 @@
     <string name="right_handed_keyboard_action_title">Right-Handed Keyboard</string>
     <string name="split_keyboard_action_title">Split Keyboard</string>
     <string name="floating_keyboard_action_title">Floating Keyboard</string>
+    <string name="resize_keyboard_action_title">Resize Keyboard</string>
 
     <string name="action_kind_action_key">Action Key</string>
     <string name="action_kind_pinned_key">Pinned Action(s)</string>
