Add arrow key row and arrow actions

--- a/java/res/drawable/chevron_up.xml
+++ b/java/res/drawable/chevron_up.xml
@@ -4,7 +4,7 @@
     android:viewportWidth="24"
     android:viewportHeight="24">
   <path
-      android:pathData="M9,6l6,6l-6,6"
+      android:pathData="M6,15l6,-6l6,6"
       android:strokeLineJoin="round"
       android:strokeWidth="2"
       android:fillColor="#00000000"
