--- a/java/unstable/res/values/strings-appname.xml
+++ b/java/unstable/res/values/strings-appname.xml
@@ -21,17 +21,17 @@
 <resources>
     <!-- Application name for opensource Android keyboard. AOSP(Android Open Source Project) should not be translated.
          This resource should be copied from msgid="8250992613616792321" -->
-    <string name="english_ime_name">FUTO Keyboard</string>
+    <string name="english_ime_name">FUTO Keyboard [Dev Build]</string>
 
     <!-- Name of Android spell checker service. AOSP(Android Open Source Project) should not be translated.
          This resource should be copied from msgid="511950477199948048" -->
-    <string name="spell_checker_service_name">FUTO Spell Checker</string>
+    <string name="spell_checker_service_name">FUTO Spell Checker [Dev Build]</string>
 
     <!-- Title for Android Keyboard settings screen. AOSP(Android Open Source Project) should not be translated.
          This resource should be copied from msgid="423615877174850267" -->
-    <string name="english_ime_settings">FUTO Keyboard Settings</string>
+    <string name="english_ime_settings">FUTO Keyboard Settings [Dev Build]</string>
 
     <!-- Title for the spell checking service settings screen. AOSP(Android Open Source Project) should not be translated.
          This resource should be copied from msgid="2970535894327288421" -->
-    <string name="android_spell_checker_settings">FUTO Spell Checker Settings</string>
+    <string name="android_spell_checker_settings">FUTO Spell Checker Settings [Dev Build]</string>
 </resources>
