--- a/java/res/values/donottranslate-config-spacing-and-punctuations.xml
+++ b/java/res/values/donottranslate-config-spacing-and-punctuations.xml
@@ -25,7 +25,9 @@
     <!-- Symbols that are normally preceded by a space (used to add an auto-space before these) -->
     <string name="symbols_preceded_by_space"></string>
     <!-- Symbols that are normally followed by a space (used to add an auto-space after these) -->
-    <string name="symbols_followed_by_space">.,;!?)]}</string>
+    <string name="symbols_followed_by_space">.,;:!?)]}</string>
+    <!-- Symbols that may be preceded by a space and should have different auto-spacing rules, necessary for emoticons ;) :) -->
+    <string name="symbols_optionally_preceded_by_space">;:</string>
     <!-- Symbols that are normally followed by a space only if preceded by a space -->
     <string name="symbols_followed_by_space_iff_preceded_by_space">-&amp;</string>
     <!-- Symbols that behave like a single punctuation when typed next to each other -->
