Add High Contrast Yellow theme, add some additional extended colors

--- a/java/res/values/strings-uix.xml
+++ b/java/res/values/strings-uix.xml
@@ -65,6 +65,7 @@
     <string name="theme_sunflower">Sunflower</string>
     <string name="theme_cotton_candy">Cotton Candy</string>
     <string name="theme_hotdog">Hot Dog</string>
+    <string name="theme_high_contrast_yellow">High Contrast Yellow</string>
     <string name="theme_dev">Construction Theme</string>
     <string name="theme_dynamic_system">Dynamic Auto</string>
     <string name="theme_dynamic_dark">Dynamic Dark</string>
