--- a/java/res/values/strings-uix.xml
+++ b/java/res/values/strings-uix.xml
@@ -426,4 +426,16 @@
     <string name="setup_warning_multiple_versions">Warning: You seem to have both Play Store and Standalone versions installed, we only recommend installing one</string>
     <string name="setup_active_input_method">Please select FUTO Keyboard as your active input method.</string>
     <string name="setup_switch_input_methods">Switch Input Methods</string>
+
+    <!-- Credits menu -->
+    <string name="credits_menu_title">Credits</string>
+    <string name="credits_menu_header_text">Thanks to these people for helping make FUTO Keyboard a great app!</string>
+    <string name="credits_menu_team_translators_title">Translators</string>
+    <string name="credits_menu_team_keyboard_layouts_title">Layouts</string>
+    <string name="credits_menu_team_code_title">Code</string>
+    <string name="credits_menu_team_third_party_libraries_title">Third-party</string>
+    <string name="credits_menu_nonaffiliation_notice">The authors listed above are not affiliated with us, and may not necessarily endorse or promote us. Listing does not imply affiliation or endorsement.</string>
+    <string name="credits_menu_contribute_translations_button">Help translate the app</string>
+    <string name="credits_menu_contribute_keyboard_layouts_button">Contribute layouts</string>
+    <string name="credits_menu_contribute_code_button">Contribute code</string>
 </resources>
